tests/error/experimental_errors/list_literal.err
Error: Experimental feature (at $FILE:9:4)
  | 
7 | @guppy(module)
8 | def main() -> None:
9 |     [1, 2, 3]
  |     ^^^^^^^^^ Lists are an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
